--- a/assets/style.css
+++ b/assets/style.css
@@ -133,6 +133,9 @@ section aside {
         flex-direction: row;
         justify-content: space-between;
     }
+    .main-container {
+        padding: 0;
+    }
     .main-container h1{
         text-align: center;
     }
