--- a/assets/style.css
+++ b/assets/style.css
@@ -117,6 +117,34 @@ section aside {
         }
     } 
 }
+.alternate-container{
+    display: block;
+    padding: 1rem;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    & .link-box {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        & a {
+            background: rgba(93, 94, 185, 0.9);
+            color: white;
+            padding: .6rem 1.4rem;
+            border-radius: .5rem;
+            box-shadow: 0 0 .25rem .08rem rgba(89, 35, 217, 0.3);
+            backdrop-filter: blur(.75rem);
+            -webkit-backdrop-filter: blur(.75rem);
+            border: 1px solid rgba(92, 50, 145, .67);
+            text-align: center;
+            text-decoration: none;
+            transition: all .3s;
+        }
+        & a:hover {
+            background: rgba(93, 94, 185, 0.17);
+            color: rgb(236, 73, 73);
+        }
+    } 
+}
 
 @media (max-width: 991px){
     section {
@@ -129,7 +157,7 @@ section aside {
         display: flex;
         justify-content: space-between;
     }
-    .aside-container .link-box {
+    .aside-container .link-box, .alternate-container .link-box {
         flex-direction: row;
         justify-content: space-between;
     }
@@ -150,13 +178,13 @@ section aside {
             }
         }
     }  
-    .aside-container .link-box a{
+    .aside-container .link-box a, .alternate-container .link-box a{
         display: flex;
         flex-direction: column;
     }
 }
 @media (max-width: 480px){
-    .aside-container .link-box {
+    .aside-container .link-box, alternate-container .link-box {
         flex-direction: column;
         & a{
             display: inline;
