--- a/assets/style.css
+++ b/assets/style.css
@@ -124,7 +124,7 @@ section aside {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     & .link-box {
         padding: 1rem 0;
-        display: flex;
+        display: none;
         flex-direction: column;
         gap: 1rem;
         & a {
@@ -161,6 +161,12 @@ section aside {
     .aside-container .link-box, .alternate-container .link-box {
         flex-direction: row;
         justify-content: space-between;
+    }
+    .aside-container .link-box {
+        display: none;
+    }
+    .alternate-container .link-box {
+        display: flex;
     }
     .main-container {
         padding: 0;
