--- a/assets/style.css
+++ b/assets/style.css
@@ -5,17 +5,232 @@ html, body {
     padding: 0;
     margin: 0;
 }
-section {
+header {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    display: flex;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    color: rgb(217, 217, 217);
+    padding: 1rem;
+    justify-content: space-between;
+    backdrop-filter: blur(6px);
+    background: rgba(0, 0, 0, 0.587);
+    border-bottom: 2px solid white;
+    z-index: 2;
+    & h4 {
+        display: inline;
+        color: white;
+    }
+}
+.hero {
+    --s: 81px;
+    --c1: #1c1c1c;
+    --c2: #431b82;
+    --_g: var(--c1) 90deg, var(--c2) 0 135deg, #0000 0;
+    background: conic-gradient(from -45deg at calc(100%/3) calc(100%/3), var(--c1) 90deg, #0000 0),
+    conic-gradient(from -135deg at calc(100%/3) calc(2*100%/3), var(--_g)),
+    conic-gradient(from 135deg at calc(2*100%/3) calc(2*100%/3),var(--_g)),
+    conic-gradient(from 45deg at calc(2*100%/3) calc(100%/3), var(--_g), var(--c1) 0 225deg, var(--c2) 0);
+    background-size: var(--s) var(--s);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    & .profile-box {
+        background: rgba(93, 94, 185, 0.07);
+        padding: 3rem 1.5rem;
+        width: 80%;
+        max-width: 992px;
+        margin: 0 auto;
+        border-radius: .5rem;
+        box-shadow: 0 0 .25rem .015rem rgba(189, 135, 217, 0.93);  /* 0 0 .5rem .15rem rgba(89, 35, 217, 0.3); */
+        backdrop-filter: blur(.75rem);
+        -webkit-backdrop-filter: blur(.75rem);
+        border: 2px solid rgba(148, 123, 179, .67);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        & .img {
+            text-align: center;
+            & img {
+                box-shadow: -2px -2px rgb(196, 1, 1);
+            }
+        }
+        & .text {
+            & h2 {
+                font-size: 3rem;
+                font-family: Verdana, Geneva, Tahoma, sans-serif;
+                color: white;
+                margin: 0;
+            }
+            & h4, p {
+                font-size: 1rem;
+                margin: 0;
+                font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+                color: rgb(225, 225, 225);
+                margin-top: .5rem;
+            }
+        }
+        & .details .group div {
+            margin: 1rem 0;
+            & h4 {
+                display: inline;
+            }
+            & p, h4 {
+                margin: 0;
+            }
+        }
+    }
+}
+.main{
+    max-width: 1020px;
+    margin: 3rem auto 0;
+    padding: 1rem;
+    & ul{
+        display: flex;
+        padding: 1rem;
+        perspective: 100px;
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+    & h1{
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        color: rgb(56, 14, 208);
+        text-shadow: .8px 1px red;
+        text-transform: uppercase;
+        text-align: left;
+        margin-bottom: 1rem;
+    }
+    & li{
+        color: rgb(56, 14, 208);
+        list-style: none;
+        background: rgb(253,248,243);
+        height: 0;
+        width: calc(50% - 1rem);
+        margin: 0;
+        padding: 1rem .5rem;
+        overflow: hidden;
+        opacity: 0;
+        transform: rotateX(-90deg);
+        transition: all .5s cubic-bezier(.36,-0.64,.34,1.76);
+        font-family: cursive, Verdana, Geneva, Tahoma, sans-serif;
+        box-shadow: inset 0px 0px 3px;
+    }
+    & li.show{
+        height: auto;
+    }
+    & li.fade{
+        opacity: 1;
+    }
+    & li.swing{
+        transform: none;
+        transition: all .5s cubic-bezier(.36,-0.64,.34,1.76);
+    }
+    & li h3, li p {
+        margin: 0;
+    }
+}
+.divider{
+    width: 70%;
+    margin: 2rem auto;
+}
+.link-box {
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    & a {
+        background: rgba(93, 94, 185, 0.9);
+        color: white;
+        padding: .6rem 1.4rem;
+        border-radius: .5rem;
+        box-shadow: 0 0 .25rem .08rem rgba(89, 35, 217, 0.3);
+        backdrop-filter: blur(.75rem);
+        -webkit-backdrop-filter: blur(.75rem);
+        border: 1px solid rgba(92, 50, 145, .67);
+        text-align: center;
+        text-decoration: none;
+        transition: all .3s;
+    }
+    & a:hover {
+        background: rgba(93, 94, 185, 0.17);
+        color: rgb(236, 73, 73);
+    }
+    & a:active {
+        transition: none;
+        transform: scale(0.95);
+        box-shadow: 0 0 .12rem .12rem rgba(89, 35, 217, 0.3);
+    }
+} 
+
+footer{
+    padding: .75rem 1.5rem;
+    background: #1c1c1c;
+    text-align: center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+@media (max-width: 765px){
+    .main{
+        & ul {
+            & li{
+                width: 100%;
+            }
+        }
+    }
+    .profile-box {
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        & .text{
+            text-align: center;
+        }
+    }
+}
+@media (max-width: 600px){
+    .hero .profile-box {
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        & .text{
+            text-align: center;
+            & h2 {
+                font-size: 2rem;
+            }
+        }
+    }
+    .link-box {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+        & a {
+            width: 200px;
+        }
+    } 
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.main-section {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1020px;
-    margin: 0 auto;
+    
 }
-section main {
-    padding: 1rem;
+.main-section main {
+    
     width: 66.67%;
 }
-section aside {
+.main-section aside {
     padding: 1rem;
     width: 33.33%;
 }
@@ -153,10 +368,10 @@ section aside {
 }
 
 @media (max-width: 991px){
-    section {
+    .main-section {
         flex-direction: column-reverse;
     }
-    section main, section aside {
+    .main-section main, .main-section aside {
         width: 100%;
     }
     .aside-container .profile-box .details {
@@ -193,6 +408,12 @@ section aside {
     .aside-container .link-box a, .alternate-container .link-box a{
         display: flex;
         flex-direction: column;
+    }
+    header {
+        & h4 {
+            display: block;
+            margin: 0;
+        }
     }
 }
 @media (max-width: 480px){
