--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,7 @@ header {
     conic-gradient(from 45deg at calc(2*100%/3) calc(100%/3), var(--_g), var(--c1) 0 225deg, var(--c2) 0);
     background-size: var(--s) var(--s);
     height: 100vh;
+    max-height: 650px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -111,7 +112,7 @@ header {
         opacity: 0;
         transform: rotateX(-90deg);
         transition: all .5s cubic-bezier(.36,-0.64,.34,1.76);
-        font-family: cursive, Verdana, Geneva, Tahoma, sans-serif;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         box-shadow: inset 0px 0px 3px;
     }
     & li.show{
