--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@ header {
     & ul{
         display: flex;
         padding: 1rem;
-        perspective: 100px;
+       /* perspective: 100px; */
         flex-wrap: wrap;
         gap: 2rem;
     }
